--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "lint": "eslint src --ext .tsx,.ts --fix",
+    "dev-server": "json-server server.json -w -d 500",
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview"
@@ -24,6 +25,7 @@
     "@types/styled-components": "^5.1.26",
     "@vitejs/plugin-react": "^2.2.0",
     "eslint": "^8.29.0",
+    "json-server": "^0.17.1",
     "typescript": "^4.6.4",
     "vite": "^3.2.3"
   }
